--- a/api/gameroom/templates/testroom.html
+++ b/api/gameroom/templates/testroom.html
@@ -17,7 +17,7 @@
         <input id="chat-message-submit" type="button" value="Send">
 
       {{room_name|json_script:"room-name"}}
-      <!-- <script>
+      <script>
           const roomName = JSON.parse(document.getElementById('room-name').textContent)
           const chatSocket = new WebSocket(
               'ws://' +
@@ -65,7 +65,7 @@
             }));
             messageInputDom.value = '';
         };
-      </script> -->
+      </script>
   
       <!-- Optional JavaScript; choose one of the two! -->
   
