--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,7 @@
 
 // Components
 @import './components/Navbar/Navbar';
+@import './components/Sidenav/Sidenav';
 // Other
 
 // Any Universal Styling
