--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,7 +3,7 @@
 @import './variables';
 
 // Pages
-
+@import "./pages/User/User";
 // Components
 @import './components/Navbar/Navbar';
 @import './components/Sidenav/Sidenav';
