Add Stats tables

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,7 +8,7 @@
 @import './components/Navbar/Navbar';
 @import './components/Sidenav/Sidenav';
 // Other
-
+@import './components/StatInformation/StatInformation';
 // Any Universal Styling
 
 body {
