--- a/client/src/components/StatInformation/_StatInformation.scss
+++ b/client/src/components/StatInformation/_StatInformation.scss
@@ -36,3 +36,11 @@
     width: 70%;
 
 }
+.headers{
+    font-weight: bolder;
+    font-size: 1.2rem;
+}
+#uname-title{
+    font-size: 1.8rem;
+    text-align: center;
+}
