--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -7,6 +7,7 @@
 // Components
 @import './components/Navbar/Navbar';
 @import './components/Sidenav/Sidenav';
+@import './components/UserInformation/UserInformation';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
