Add username card

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,6 +8,7 @@
 @import './components/Navbar/Navbar';
 @import './components/Sidenav/Sidenav';
 @import './components/UserInformation/UserInformation';
+@import './components/Sidenav/UserCards';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
