Add Join and create Rooms

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -9,6 +9,8 @@
 @import './components/Sidenav/Sidenav';
 @import './components/UserInformation/UserInformation';
 @import './components/Sidenav/UserCards';
+@import './components/CreateGame/CreateGame';
+@import './components/JoinGame/JoinGame';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
