--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,6 +4,7 @@
 
 // Pages
 @import "./pages/User/User";
+@import "./pages/Game/Game";
 // Components
 @import './components/Navbar/Navbar';
 @import './components/Sidenav/Sidenav';
@@ -11,6 +12,9 @@
 @import './components/Sidenav/UserCards';
 @import './components/CreateGame/CreateGame';
 @import './components/JoinGame/JoinGame';
+@import './components/CurrentScore/CurrentScore';
+@import './components/RoundCounter/RoundCounter';
+@import './components/Legdisplay/Legdisplay';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
