--- a/client/src/pages/Game/_Game.scss
+++ b/client/src/pages/Game/_Game.scss
@@ -1,3 +1,28 @@
+.Game-layout{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr ;
+}
+#Enter-Score{
+    grid-column: 3;
+    grid-row: 2;
+}
+#CurrentScore-layout{
+    grid-column:2 ;
+    grid-row:1;
+}
+#OpponentScore-layout{
+    grid-column: 4;
+    grid-row:1;
+}
+
+#Legdisplay-layout{
+    grid-column: 3;
+    grid-row:1;
+    margin-top: 2rem;
+    margin-left: 3.5rem;
+}
 #score{
     width: 15rem;
 }
+
