Add a score rundown list

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -15,6 +15,7 @@
 @import './components/CurrentScore/CurrentScore';
 @import './components/Legdisplay/Legdisplay';
 @import './components/OpponentScore/OpponentScore';
+@import './components/ScoreRundown/ScoreRundown';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
