--- a/client/src/pages/Game/_Game.scss
+++ b/client/src/pages/Game/_Game.scss
@@ -20,9 +20,14 @@
     grid-column: 3;
     grid-row:1;
     margin-top: 2rem;
-    margin-left: 3.5rem;
+    margin-left: 4rem;
 }
 #score{
     width: 15rem;
 }
 
+#ScoreRundown-layout{
+    grid-column: 3;
+    grid-row: 2;
+    margin-top: 4rem;
+}
