--- a/client/src/components/ScoreRundown/_ScoreRundown.scss
+++ b/client/src/components/ScoreRundown/_ScoreRundown.scss
@@ -1,9 +1,13 @@
 #ScoreRundown{
-    background-color: gold;
+    background-color: rgb(0, 89, 255);
     width: 15rem;
     text-align: center;
+    border-radius:12px;
+    ul{
+        list-style-type: none;
+    }
     li{
-        border-bottom: 1px solid grey;
+        border-bottom: 1px solid black;
     }
     
 }
