--- a/client/src/pages/User/_User.scss
+++ b/client/src/pages/User/_User.scss
@@ -24,3 +24,15 @@ width: 60%;
 grid-column: 2;
 grid-row: 2;
 }
+
+#createGameModal {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
