Add some edittinf to logout modal

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -16,6 +16,7 @@
 @import './components/Legdisplay/Legdisplay';
 @import './components/OpponentScore/OpponentScore';
 @import './components/ScoreRundown/ScoreRundown';
+@import './components/GameNavbar/GameNavbar';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
