--- a/client/src/pages/Game/_Game.scss
+++ b/client/src/pages/Game/_Game.scss
@@ -31,3 +31,15 @@
     grid-row: 2;
     margin-top: 4rem;
 }
+
+.display-winner {
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
