Add a How to component

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -20,6 +20,7 @@
 @import './components/GameNavbar/GameNavbar';
 @import './components/ThreeDartTable/ThreeDartTable';
 @import './components/WinsTable/WinsTable';
+@import './components/HowTo/HowTo';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
