Add Home page layout

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,7 @@
 @import "./pages/User/User";
 @import "./pages/Game/Game";
 @import "./pages/Leaderboard/Leaderboard";
+@import './pages/Home/Home';
 // Components
 @import './components/Navbar/Navbar';
 @import './components/Sidenav/Sidenav';
