Add some basic styling

--- a/client/src/components/CreateGame/_CreateGame.scss
+++ b/client/src/components/CreateGame/_CreateGame.scss
@@ -1,6 +1,6 @@
 #Create-Game {
     margin-top: 2rem;
-    background-color: lightcoral;
+    background-color: rgb(174,128,107);
     width: 50rem;
     text-align: center;
     h1 {
