--- a/client/src/components/JoinGame/_JoinGame.scss
+++ b/client/src/components/JoinGame/_JoinGame.scss
@@ -1,5 +1,5 @@
 #Join-game {
-    background-color: yellowgreen;
+    background-color: rgb(174,128,107);
     width: 50rem;
     text-align: center;
     h1 {
