--- a/client/src/components/Navbar/_Navbar.scss
+++ b/client/src/components/Navbar/_Navbar.scss
@@ -1,8 +1,8 @@
 .navbar {
-    background-color: blue;
+    background-color: rgb(51,56,69);
 }
 .modal-body{
-    background-color: aqua;
+    background-color: rgb(174,128,107);
     position: absolute;
     top: 40px;
     left: 40px;
