--- a/client/src/components/UserInformation/_UserInformation.scss
+++ b/client/src/components/UserInformation/_UserInformation.scss
@@ -12,9 +12,11 @@
 
 #user-info{
     table{
-        background-color: beige;
+        background-color: rgb(51,56,69);
         margin-left: 5rem;
         margin-top: 2rem;
+        color: rgb(250,251,251);
+        border-radius: 12px;
     }
     td{
         padding: 1.5rem;
