--- a/client/src/pages/Home/_Home.scss
+++ b/client/src/pages/Home/_Home.scss
@@ -1,11 +1,16 @@
 #Greeting-layout {
     width: 70%;
-    background-color: chartreuse;
+    background-color: rgb(169,167,164);
     margin-left: 15%;
     height: 20rem;
+    border-radius: 12px;
+    margin-top: 2rem;
+    text-align: center;
 }
 #UserStories-layout {
     width: 70%;
-    background-color: palevioletred;
+    background-color: rgb(169,167,164);
     margin-left: 15%;
+    margin-top: 3rem;
+    border-radius: 12px;
 }
