--- a/client/src/components/GameNavbar/_GameNavbar.scss
+++ b/client/src/components/GameNavbar/_GameNavbar.scss
@@ -1,5 +1,5 @@
 .confirm{
-    background-color: blueviolet;
+    background-color: rgb(174,128,107);
     width: 15rem;
     text-align: center;
     margin-left: 45%;
