--- a/client/src/components/HowTo/_HowTo.scss
+++ b/client/src/components/HowTo/_HowTo.scss
@@ -1,5 +1,5 @@
 #HowTo{
-    background-color: cadetblue;
+    background-color: rgb(174,128,107);
     text-align: center;
     width: 40%;
     margin-left: 30%;
