--- a/client/src/components/Legdisplay/_Legdisplay.scss
+++ b/client/src/components/Legdisplay/_Legdisplay.scss
@@ -1,5 +1,5 @@
 #legdisplay {
-    background-color: #383838;
+    background-color: rgb(51,56,69);
     text-align: center;
     border-radius: 10px;
     width: 70px;
