--- a/client/src/components/ScoreRundown/_ScoreRundown.scss
+++ b/client/src/components/ScoreRundown/_ScoreRundown.scss
@@ -1,8 +1,9 @@
 #ScoreRundown{
-    background-color: rgb(0, 89, 255);
+    background-color: rgb(162,164,172);
     width: 15rem;
     text-align: center;
     border-radius:12px;
+    border: 3px solid rgb(51,56,69) ;
     ul{
         list-style-type: none;
     }
