--- a/client/src/components/SideNav/_Sidenav.scss
+++ b/client/src/components/SideNav/_Sidenav.scss
@@ -1,7 +1,8 @@
 .Sidebar {
     height: 100%;
     width: 100%;
-    background-color: aqua;
+    background-color: rgb(51,56,69);
+    color: rgb(250,251,251);
     
 }
 
@@ -14,7 +15,7 @@
     li{
         width: 100%;
         height: 50px;
-        border: 3px solid red;
+        border: 3px solid rgb(162,164,172);
         list-style-type: none;
         display: flex;
         flex-direction: row;
@@ -32,7 +33,7 @@
     }
     li:hover{
         cursor: pointer;
-        background-color: royalblue;
+        background-color: rgb(34, 37, 46);
     }
     
 }
