--- a/client/src/pages/Game/_Game.scss
+++ b/client/src/pages/Game/_Game.scss
@@ -20,10 +20,14 @@
     grid-column: 3;
     grid-row:1;
     margin-top: 2rem;
-    margin-left: 4rem;
+    margin-left: 4.5rem;
 }
 #score{
     width: 15rem;
+    background-color: rgb(162,164,172);
+    height: 3rem;
+    border-radius: 12px;
+    border: 3px solid rgb(51,56,69);
 }
 
 #ScoreRundown-layout{
