Add styling to game and user rooms

--- a/client/src/components/JoinGame/_JoinGame.scss
+++ b/client/src/components/JoinGame/_JoinGame.scss
@@ -1,14 +1,16 @@
 #Join-game {
-    background-color: rgb(174,128,107);
+    background-color: rgb(162,164,172);
     width: 50rem;
     text-align: center;
     h1 {
         font-size: 2rem;
+        text-align: center;
     }
     h4 {
         font-size: 1.3rem;
         font-weight: lighter;
         margin-top: 0.5rem;
+        text-align: center;
     }
 }
 
