Add navbar styling

--- a/client/src/components/GameNavbar/_GameNavbar.scss
+++ b/client/src/components/GameNavbar/_GameNavbar.scss
@@ -4,3 +4,15 @@
     text-align: center;
     margin-left: 45%;
 }
+#logout{
+    float: right;
+    background-color: rgb(169,167,164);
+    color: rgb(51,56,69);
+}
+#logout:hover{
+    background-color: rgb(155,98,119);
+    color: rgb(51,56,69);
+}
+#GameNav{
+    width: 100%;
+}
