--- a/client/src/components/Navbar/_Navbar.scss
+++ b/client/src/components/Navbar/_Navbar.scss
@@ -15,4 +15,28 @@
 .subtitle{
     text-align: center;
 }
+.button{
+    width: 7rem;
+    border-radius: 5px;
+    background-color: rgb(169,167,164);
+    color: rgb(51,56,69);
+}
+
+.button:hover{
+    background-color: rgb(155,98,119);
+    color: rgb(51,56,69);
+}
+#signup{
+    float: right;
+}
+#login{
+    float: right;
+    margin-right: 2rem;
+}
+#leaderboard-nav{
+    color: rgb(169,167,164);
+}
+.Home-nav{
+    color: rgb(169,167,164);
+}
 
