update greetings styling and update styling on home page

--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -1,4 +1,5 @@
 $dartshub-purple: #6147ff;
+$dartshub-dark-purple: #1d135b;
 $dartshub-white: #fff;
 $dartshub-grey: #f6f7ff;
 $dartshub-text-color: #16152c;
