update user stories styling

--- a/client/src/components/Greeting/_greeting.scss
+++ b/client/src/components/Greeting/_greeting.scss
@@ -3,6 +3,7 @@
   background-color: $dartshub-purple;
   text-align: left;
   color: $dartshub-white;
+  overflow: hidden;
 
   .content {
     padding-bottom: 25px;
