--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -23,6 +23,7 @@
 @import './components/WinsTable/WinsTable';
 @import './components/HowTo/HowTo';
 @import './components/Greeting/greeting';
+@import './components/UserStories/userstories';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
