--- a/client/src/pages/User/_User.scss
+++ b/client/src/pages/User/_User.scss
@@ -1,30 +1,31 @@
-.User-page{
-    display: grid;
-    grid-template-columns: 20vw 120vw;
-    grid-template-rows: 50vh 50vh;
-}
-#Sidenav-layout{
-background-color:rgb(51,56,69);
-grid-column: 1;
-grid-row-start: 1;
-grid-row-end: span 2;
-
+.user-page{
+  background-color: $dartshub-white;
 }
 
-#UserInformation-layout{
-background-color: rgb(162,164,172);
-width: 60%;
-grid-column: 2;
-grid-row: 1/2; 
-margin-left: 1rem;
-border-radius: 12px;
-margin-top: 1rem;
+.sidenav-layout{
+  background-color: $dartshub-purple;
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  z-index: 1; 
+  top: 0;
+  left: 0;
+  background-color: $dartshub-purple;
+  overflow: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
 }
-#StatInformation-layout{
-background-color: rgb(162,164,172);
-width: 60%;
-grid-column: 2;
-grid-row: 2;
+
+.main-content {
+  margin-left: 250px;
+  width: calc(100% - 250px);
+}
+
+.userInformation-layout{
+  background-color: $dartshub-grey;
+}
+.statInformation-layout{
+  background-color: $dartshub-grey;
 }
 
 #createGameModal {
