--- a/client/src/pages/User/_User.scss
+++ b/client/src/pages/User/_User.scss
@@ -11,7 +11,7 @@
   top: 0;
   left: 0;
   background-color: $dartshub-purple;
-  overflow: hidden;
+  overflow-x: hidden;
   padding-top: 60px;
   transition: 0.5s;
 }
