update styling for join game component

--- a/client/src/components/JoinGame/_JoinGame.scss
+++ b/client/src/components/JoinGame/_JoinGame.scss
@@ -1,5 +1,7 @@
 #Join-game {
-    background-color: rgb(162,164,172);
+    background-color: $dartshub-purple;
+    color: $dartshub-white;
+    padding: 25px 0;
     width: 50rem;
     text-align: center;
     h1 {
@@ -16,9 +18,10 @@
 
 #Join-Room{
     margin-top: 2.5rem;
-   
+   margin-bottom: 25px;
 }
-#submit-btn{
-   margin-left: 5rem;
-   margin-top: 0.5rem;
+.submit-button{
+    background-color: $dartshub-white;
+    padding: 5px 25px;
+    color: $dartshub-text-color;
 }
