--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -7,6 +7,7 @@
 @import "./pages/Game/Game";
 @import "./pages/Leaderboard/Leaderboard";
 @import './pages/Home/Home';
+@import './pages/Lobby/lobby';
 // Components
 @import './components/Navbar/Navbar';
 @import './components/Sidenav/Sidenav';
