--- a/client/src/components/CurrentScore/_CurrentScore.scss
+++ b/client/src/components/CurrentScore/_CurrentScore.scss
@@ -1,28 +1,17 @@
-  #scorecontainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-  }
-  
-  .btn {
-    width: 150px;
-    height: 150px;
-    border: 0;
-    border-radius: 20px;
-    outline: none;
-    font-size: 100px;
-    font-family: rubik;
-    text-shadow: 3px 3px 5px;
-    display: block;
-    position: relative;
-  }
-  
-  #team1 {
-    background-color: #e85c5c;
-    box-shadow: inset 0 -5px 1px #842f2f, 6px 7px 3px rgba(66, 66, 66, 0.5);
-  }
-  
- 
-  
-  
+.score {
+  width: 150px;
+  height: 150px;
+  border: 0;
+  border-radius: 25px;
+  font-size: 95px;
+  outline: none;
+  display: block;
+  position: relative;
+}
+
+#team1 {
+  background-color: #e85c5c;
+}
+
+
+
