--- a/client/src/components/OpponentScore/_OpponentScore.scss
+++ b/client/src/components/OpponentScore/_OpponentScore.scss
@@ -1,25 +1,14 @@
-#scorecontainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-  }
+.score {
+  width: 150px;
+  height: 150px;
+  border: 0;
+  border-radius: 25px;
+  font-size: 95px;
+  outline: none;
+  display: block;
+  position: relative;
+}
   
-  .btn {
-    width: 150px;
-    height: 150px;
-    border: 0;
-    border-radius: 20px;
-    outline: none;
-    font-size: 100px;
-    font-family: rubik;
-    text-shadow: 3px 3px 5px;
-    display: block;
-    position: relative;
-  }
-  
-  #team2 {
-    background-color: #5c65e8;
-    box-shadow: inset 0 -5px 1px #2f5484, 6px 7px 3px rgba(66, 66, 66, 0.5);
-  }
-  
+#team2 {
+  background-color: #5c65e8;
+}
