--- a/client/src/components/Legdisplay/_Legdisplay.scss
+++ b/client/src/components/Legdisplay/_Legdisplay.scss
@@ -1,12 +1,11 @@
 #legdisplay {
-    background-color: rgb(51,56,69);
+    background-color: $dartshub-grey;
     text-align: center;
     border-radius: 10px;
-    width: 70px;
+    width: 150px;
     
     & p {
-      color: #ddd;
-      font-family: rubik;
+      color: $dartshub-text-color;
       font-size: 1.5rem;  
       }
     }
