update chat input styling

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -25,6 +25,7 @@
 @import './components/HowTo/HowTo';
 @import './components/Greeting/greeting';
 @import './components/UserStories/userstories';
+@import './components/Chat/chat';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
