--- a/client/src/pages/Game/_Game.scss
+++ b/client/src/pages/Game/_Game.scss
@@ -35,3 +35,12 @@
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+
+#chatbox {
+    textarea {
+        border: 1px solid $dartshub-dark-purple;
+        background-color: $dartshub-grey;
+        color: $dartshub-text-color;
+        font-size: 1.2rem;
+    }
+}
