--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -1,4 +1,4 @@
-$dartshub-purple: #6147ff;
+$dartshub-purple: #291793;
 $dartshub-dark-purple: #1d135b;
 $dartshub-white: #fff;
 $dartshub-grey: #f6f7ff;
