update layout and styling of LeadboardNav

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -26,6 +26,7 @@
 @import './components/Greeting/greeting';
 @import './components/UserStories/userstories';
 @import './components/Chat/chat';
+@import './components/LeaderboardNav/leaderboardnav';
 // Other
 @import './components/StatInformation/StatInformation';
 // Any Universal Styling
