update layout and styling of WinsTable

--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -2,4 +2,5 @@ $dartshub-purple: #291793;
 $dartshub-dark-purple: #1d135b;
 $dartshub-white: #fff;
 $dartshub-grey: #f6f7ff;
+$dartshub-dark-grey: #d0d1d6;
 $dartshub-text-color: #16152c;
