--- a/client/src/components/ThreeDartTable/_ThreeDartTable.scss
+++ b/client/src/components/ThreeDartTable/_ThreeDartTable.scss
@@ -1,22 +1,21 @@
 .ThreeDartTable {
     width: 100%;
-    background-color: rgb(169,167,164);
+    background-color: $dartshub-grey;
     text-align: center;
     
     th{
         background-color: rgb(51,56,69);
         height: 5rem;
-        font-size: 1.3rem;        
+        font-size: 1.3rem;
         border-bottom: 1px solid black;
         color: rgb(250,251,251);
     }
     tr:hover{
-        background-color:rgb(131, 133, 141);
+        background-color: #d0d1d6;
     }
-
     td{
         height: 3rem;
-        font-size: 1rem;        
+        font-size: 1rem;
         border-bottom: 1px solid black;
     }
 }
