fix spelling mistake in greeting and fix issues with padding in home nav

--- a/client/src/components/Navbar/_Navbar.scss
+++ b/client/src/components/Navbar/_Navbar.scss
@@ -47,13 +47,14 @@
     background-color: $dartshub-white;
     width: 7rem;
     border-radius: 25px;
-    padding: 5px;
+    padding: 2px 25px;
     color: $dartshub-text-color;
 }
 
 .homenav-link:hover {
     text-decoration: none;
     color: $dartshub-text-color;
+    background-color: $dartshub-grey;
 }
 
 .close-button {
